tests/NormalTests/paczka1/fuzzy1/38948334.err
Error in line 2: SUhcJfPl S503 97,8
Error in line 19: S525 S760 -4,9
Error in line 26: 52iNpb A734 25,0
Error in line 22: 55eCIVL A734 184,8
Error in line 21: nDmTXPm A734 8,4
Error in line 33: nDmTXPm S525 52,0
